[package]
name = "imgprxy"
version = "0.1.0"
authors = ["Mattias Lundell <mattias@fishbrain.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
# iron = "0.5.*"
# router = "0.5.*"
# logger = "0.4.*"
# env_logger = "0.5.*"
reqwest = "0.8.3"
error-chain = "0.10"
resize = "*"
image = "*"
url = "1.6.0"
# urlencoded = "0.6"
