[package]
name = "imgprxy"
version = "0.1.0"
authors = ["Mattias Lundell <mattias@fishbrain.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
reqwest = "0.8.3"
error-chain = "0.10"
resize = "*"
image = "*"
url = "1.6.0"
envy = "0.3.2"
serde_derive = "1.0.27"
serde = "1.0"
lazy_static = "1.0.0"